@@ -88,12 +88,12 @@ class BackupReader {
 			$filename = 'compress.zlib://' . $filename;
 		}
 		$file = fopen( $filename, 'rt' );
-		$this->importFromHandle( $file );
+		return $this->importFromHandle( $file );
 	}
 
 	function importFromStdin() {
 		$file = fopen( 'php://stdin', 'rt' );
-		$this->importFromHandle( $file );
+		return $this->importFromHandle( $file );
 	}
 
 	function importFromHandle( $handle ) {
@@ -106,7 +106,7 @@ class BackupReader {
 		$this->importCallback =  $importer->setRevisionCallback(
 			array( &$this, 'handleRevision' ) );
 
-		$importer->doImport();
+		return $importer->doImport();
 	}
 }
 
@@ -122,9 +122,15 @@ if( isset( $options['dry-run'] ) ) {
 }
 
 if( isset( $args[0] ) ) {
-	$reader->importFromFile( $args[0] );
+	$result = $reader->importFromFile( $args[0] );
 } else {
-	$reader->importFromStdin();
+	$result = $reader->importFromStdin();
+}
+
+if( WikiError::isError( $result ) ) {
+	echo $result->getMessage() . "\n";
+} else {
+	echo "Done!\n";
 }
 
 ?>
